@@ -112,7 +112,7 @@ class WC_Stripe_Payment_Tokens {
 	 * @return bool
 	 */
 	public static function customer_has_saved_methods( $customer_id ) {
-		$gateways = [ 'stripe', 'stripe_sepa' ];
+		$gateways = [ WC_Gateway_Stripe::ID, WC_Gateway_Stripe_Sepa::ID ];
 
 		if ( empty( $customer_id ) ) {
 			return false;
@@ -166,7 +166,7 @@ class WC_Stripe_Payment_Tokens {
 					$stored_tokens[ $token->get_token() ] = $token;
 				}
 
-				if ( 'stripe' === $gateway_id ) {
+				if ( WC_Gateway_Stripe::ID === $gateway_id ) {
 					$stripe_customer = new WC_Stripe_Customer( $customer_id );
 					$stripe_sources  = $stripe_customer->get_sources();
 
@@ -175,7 +175,7 @@ class WC_Stripe_Payment_Tokens {
 							if ( ! isset( $stored_tokens[ $source->id ] ) ) {
 								$token = new WC_Payment_Token_CC();
 								$token->set_token( $source->id );
-								$token->set_gateway_id( 'stripe' );
+								$token->set_gateway_id( WC_Gateway_Stripe::ID );
 
 								if ( WC_Stripe_Helper::is_card_payment_method( $source ) ) {
 									$token->set_card_type( strtolower( $source->card->brand ) );
@@ -194,7 +194,7 @@ class WC_Stripe_Payment_Tokens {
 							if ( ! isset( $stored_tokens[ $source->id ] ) && WC_Stripe_Payment_Methods::CARD === $source->object ) {
 								$token = new WC_Payment_Token_CC();
 								$token->set_token( $source->id );
-								$token->set_gateway_id( 'stripe' );
+								$token->set_gateway_id( WC_Gateway_Stripe::ID );
 								$token->set_card_type( strtolower( $source->brand ) );
 								$token->set_last4( $source->last4 );
 								$token->set_expiry_month( $source->exp_month );
@@ -209,7 +209,7 @@ class WC_Stripe_Payment_Tokens {
 					}
 				}
 
-				if ( 'stripe_sepa' === $gateway_id ) {
+				if ( WC_Gateway_Stripe_Sepa::ID === $gateway_id ) {
 					$stripe_customer = new WC_Stripe_Customer( $customer_id );
 					$stripe_sources  = $stripe_customer->get_sources();
 
@@ -218,7 +218,7 @@ class WC_Stripe_Payment_Tokens {
 							if ( ! isset( $stored_tokens[ $source->id ] ) ) {
 								$token = new WC_Payment_Token_SEPA();
 								$token->set_token( $source->id );
-								$token->set_gateway_id( 'stripe_sepa' );
+								$token->set_gateway_id( WC_Gateway_Stripe_Sepa::ID );
 								$token->set_last4( $source->sepa_debit->last4 );
 								$token->set_user_id( $customer_id );
 								$token->save();
@@ -272,7 +272,7 @@ class WC_Stripe_Payment_Tokens {
 					// - APM tokens from before Split PE was in place.
 					// - Non-credit card tokens using the sources API. Payments using these will fail with the PaymentMethods API.
 					if (
-						( 'stripe' === $token->get_gateway_id() && WC_Stripe_Payment_Methods::SEPA === $token->get_type() ) ||
+						( WC_Gateway_Stripe::ID === $token->get_gateway_id() && WC_Stripe_Payment_Methods::SEPA === $token->get_type() ) ||
 						! $this->is_valid_payment_method_id( $token->get_token(), $this->get_payment_method_type_from_token( $token ) )
 					) {
 						$deprecated_tokens[ $token->get_token() ] = $token;
@@ -435,7 +435,7 @@ class WC_Stripe_Payment_Tokens {
 
 				$stripe_customer->detach_payment_method( $token->get_token() );
 			} else {
-				if ( 'stripe' === $token->get_gateway_id() || 'stripe_sepa' === $token->get_gateway_id() ) {
+				if ( WC_Gateway_Stripe::ID === $token->get_gateway_id() || WC_Gateway_Stripe_Sepa::ID === $token->get_gateway_id() ) {
 					$stripe_customer->delete_source( $token->get_token() );
 				}
 			}
@@ -460,7 +460,7 @@ class WC_Stripe_Payment_Tokens {
 					$stripe_customer->set_default_payment_method( $token->get_token() );
 				}
 			} else {
-				if ( 'stripe' === $token->get_gateway_id() || 'stripe_sepa' === $token->get_gateway_id() ) {
+				if ( WC_Gateway_Stripe::ID === $token->get_gateway_id() || WC_Gateway_Stripe_Sepa::ID === $token->get_gateway_id() ) {
 					$stripe_customer->set_default_source( $token->get_token() );
 				}
 			}
